# rtvoice

./: .env.example  .gitignore  README.md  main2.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/instructions/: unit_tests.md
.github/workflows/: cd.yml  ci.yml  docs.yaml
docs/: index.md  quickstart.md
docs/agent/: index.md
docs/api/: agent.md  audio.md  configuration.md  lifecycle_events.md  providers.md  skills.md  subagent.md  supervisor.md  tools.md  views.md
docs/guides/: listener.md  mcp.md  subagent.md  supervisor.md  tools.md
examples/: audio_recording.py  context_injection.py  listener.py  output_modalities.py  showcase.py  skills_demo.py  sonosify_output.py  subagent_with_smalltalk.py  subagents.py  subagents_with_skills.py  test.py  token_usage_summary.py  transcript.py
examples/mcp/: mock_mcp_server.py  stdio_mcp.py
plans/: context_injection.md  token_tracking.md
rtvoice/: __init__.py  _logging.py  agent.py  listener.py  service.py  views.py
rtvoice/agent/: __init__.py  agent.py  listener.py  realtime.py  supervisor.py  views.py
rtvoice/audio/: __init__.py  audio_mixer.py  devices.py  microphone.py  ports.py  session.py  speaker.py
rtvoice/conversation/: __init__.py  history.py  inactivity_timer.py  service.py  views.py
rtvoice/events/: __init__.py  bus.py  views.py
rtvoice/handler/: __init__.py  audio_handler.py  audio_recorder.py  interruption_handler.py  speech_state_tracker.py  subagent_coordinator.py  supervisor_coordinator.py  tool_call_handler.py  (+2 more)
tests/: test_listener_bridge.py  test_realtime_agent.py
(+177 files in other folders)
