[project]
name = "rtvoice"
version = "0.1.3"
description = "Real-time voice assistant built on OpenAI's Realtime API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-llmify>=0.1.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF","C90"]
ignore = [
  "E501",     # line too long
  "E402",     # imports not at top of file
  "PLC0415",  # import should be at top-level
  "PLR2004",  # magic values
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "C901",     # function too complex
  "RUF006",   # create_task return value not stored
  "PLW0603",  # global statement
  "PLW2901",  # loop variable overwritten
  "RUF001",   # en dash, etc.
  "UP046",    # derive from generic base class
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
